--- a/python_session2_strings.ipynb
+++ b/python_session2_strings.ipynb
@@ -784,47 +784,166 @@
     "\n",
     "<div dir=\"rtl\">\n",
     "\n",
-    "## تمرین های مبتدی\n",
+    "## تمرین ها\n",
     "\n",
     "1. یک رشته از کاربر بگیرید و:\n",
     "   - طول آن را چاپ کنید.\n",
     "   - آن را به حروف بزرگ و کوچک تبدیل کنید.\n",
-    "2. از کاربر یک جمله بگیرید و تعداد یک کلمه خاص را در آن بشمارید.\n",
-    "3. نام و نام خانوادگی کاربر را بگیرید و با قالب‌بندی (f-string) چاپ کنید.\n",
-    "4. از کاربر یک رشته بگیرید و برعکس آن را چاپ کنید (با Slicing).\n",
-    "5. دو رشته از کاربر بگیرید و آنها را با یک فاصله بینشان ترکیب کنید.\n",
+    "2. یک رشته از کاربر بگیرید و تعداد کلمات داخل رشته را بشمارید\n",
+    "3. از کاربر یک جمله بگیرید و تعداد یک کلمه خاص را در آن بشمارید.\n",
+    "4. نام و نام خانوادگی کاربر را بگیرید و با قالب‌بندی (f-string) چاپ کنید.\n",
+    "5. از کاربر یک رشته بگیرید و برعکس آن را چاپ کنید (با Slicing).\n",
+    "6. دو رشته از کاربر بگیرید و آنها را با یک فاصله بینشان ترکیب کنید.\n",
+    "7. رشته‌ای وارد کنید و خروجی رشته‌ای باشد که تمام فاصله‌های داخل آن حذف شده‌اند\n",
+    "8. رشته‌ای از کلمات وارد کنید، سپس بزرگ‌ترین (بیشترین طول) و کوچک‌ترین (کمترین طول) کلمه را چاپ کنید\n",
+    "9. رشته‌ای وارد کنید و تمام حروف بزرگ را کوچک و حروف کوچک را بزرگ کنید (swap case)\n",
     "\n",
     "</div>\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "063de0c7",
+   "cell_type": "markdown",
+   "id": "3043900c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "\n",
+    "1. یک رشته از کاربر بگیرید و:\n",
+    "   - طول آن را چاپ کنید.\n",
+    "   - آن را به حروف بزرگ و کوچک تبدیل کنید.\n",
+    "\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "1. طول رشته و تبدیل به حروف بزرگ و کوچک  \n",
+    "توضیح:  \n",
+    "طول رشته ورودی را نمایش می‌دهد و همچنین رشته را به حروف بزرگ و کوچک تبدیل می‌کند.  \n",
+    "Input:  \n",
+    "Hello World  \n",
+    "Output:  \n",
+    "Length of string: 11  \n",
+    "Uppercase: HELLO WORLD  \n",
+    "Lowercase: hello world  \n",
+    "\n",
+    "---\n",
+    "2. یک رشته از کاربر بگیرید و تعداد کلمات داخل رشته را بشمارید\n",
+    "\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "2. شمارش تعداد کلمات در رشته  \n",
+    "توضیح:  \n",
+    "تعداد کلمات موجود در رشته را می‌شمارد.  \n",
+    "Input:  \n",
+    "This is a sample sentence  \n",
+    "Output:  \n",
+    "Number of words: 5  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "3. از کاربر یک جمله بگیرید و تعداد یک کلمه خاص را در آن بشمارید.\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "3. شمارش تعداد یک کلمه خاص در جمله  \n",
+    "توضیح:  \n",
+    "تعداد دفعات تکرار یک کلمه خاص در جمله را پیدا می‌کند.  \n",
+    "Input:  \n",
+    "Sentence: I love Python because Python is simple  \n",
+    "Word to count: Python  \n",
+    "Output:  \n",
+    "Number of occurrences of 'Python' in the sentence: 2  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "4. نام و نام خانوادگی کاربر را بگیرید و با قالب‌بندی (f-string) چاپ کنید.\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "4. دریافت نام و نام خانوادگی و چاپ با قالب‌بندی f-string  \n",
+    "توضیح:  \n",
+    "نام و نام خانوادگی را دریافت و به صورت قالب‌بندی شده چاپ می‌کند.  \n",
+    "Input:  \n",
+    "First name: Ali  \n",
+    "Last name: Mohammadi  \n",
+    "Output:  \n",
+    "Your full name: Ali Mohammadi  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "5. از کاربر یک رشته بگیرید و برعکس آن را چاپ کنید (با Slicing).\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "5. معکوس کردن رشته با استفاده از Slicing  \n",
+    "توضیح:  \n",
+    "رشته ورودی را معکوس می‌کند.  \n",
+    "Input:  \n",
+    "python  \n",
+    "Output:  \n",
+    "Reversed string: nohtyp  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "6. دو رشته از کاربر بگیرید و آنها را با یک فاصله بینشان ترکیب کنید.\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "توضیح:  \n",
+    "دو رشته را با یک فاصله بین آن‌ها به هم می‌چسباند.  \n",
+    "Input:  \n",
+    "First string: Hello  \n",
+    "Second string: World  \n",
+    "Output:  \n",
+    "Combined string: Hello World  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "7. رشته‌ای وارد کنید و خروجی رشته‌ای باشد که تمام فاصله‌های داخل آن حذف شده‌اند\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "توضیح:  \n",
+    "تمام فاصله‌های موجود در رشته را حذف می‌کند.  \n",
+    "Input:  \n",
+    "Hello World How Are You  \n",
+    "Output:  \n",
+    "String without spaces: HelloWorldHowAreYou  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "8. رشته‌ای از کلمات وارد کنید، سپس بزرگ‌ترین (بیشترین طول) و کوچک‌ترین (کمترین طول) کلمه را چاپ کنید\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "توضیح:  \n",
+    "کلمات موجود در رشته را بررسی کرده و بزرگ‌ترین و کوچک‌ترین کلمه را نمایش می‌دهد.  \n",
+    "Input:  \n",
+    "Programming Python is fun  \n",
+    "Output:  \n",
+    "Longest word: Programming  \n",
+    "Shortest word: is  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "9. رشته‌ای وارد کنید و تمام حروف بزرگ را کوچک و حروف کوچک را بزرگ کنید (swap case)\n",
+    "\n",
+    "خروجی های قابل انتظار:\n",
+    "\n",
+    "توضیح:  \n",
+    "حروف بزرگ را کوچک و حروف کوچک را بزرگ می‌کند.  \n",
+    "Input:  \n",
+    "PyTHon  \n",
+    "Output:  \n",
+    "Swapped case string: pYthON  \n",
+    "\n",
+    "</div>\n"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "718e6627",
+   "id": "8d82a42a",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b779cce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2deb696",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
