--- a/python_session1.ipynb
+++ b/python_session1.ipynb
@@ -228,20 +228,17 @@
    "source": [
     "<div dir=\"rtl\">\n",
     "\n",
-    "# تمرین‌ها\n",
+    "<h1>تمرین‌ها</h1>\n",
     "\n",
-    "1. چاپ اطلاعات کاربر  \n",
-    "   برنامه‌ای بنویسید که نام و سن کاربر را دریافت و چاپ کند.\n",
+    "<ol>\n",
+    "<li>چاپ اطلاعات کاربر — برنامه‌ای بنویسید که نام و سن کاربر را دریافت و چاپ کند.</li>\n",
+    "<li>جمع دو عدد — برنامه‌ای بنویسید که دو عدد را از کاربر بگیرد و جمع آن‌ها را چاپ کند.</li>\n",
+    "<li>محاسبه مساحت دایره یا مستطیل — برنامه‌ای بنویسید که با گرفتن شعاع دایره، مساحت آن را محاسبه کند:\n",
+    "<code>مساحت دایره = π × r²</code>\n",
+    "یا با گرفتن طول و عرض مستطیل، مساحت آن را محاسبه کند.</li>\n",
+    "</ol>\n",
     "\n",
-    "2. جمع دو عدد  \n",
-    "   برنامه‌ای بنویسید که دو عدد را از کاربر بگیرد و جمع آن‌ها را چاپ کند.\n",
-    "\n",
-    "3. محاسبه مساحت دایره یا مستطیل  \n",
-    "   برنامه‌ای بنویسید که با گرفتن شعاع دایره، مساحت آن را محاسبه کند:  \n",
-    "   `مساحت دایره = π × r²`  \n",
-    "   یا با گرفتن طول و عرض مستطیل، مساحت آن را محاسبه کند.\n",
-    "\n",
-    "</div>"
+    "</div>\n"
    ]
   }
  ],
