--- a/python_session3_conditions.ipynb
+++ b/python_session3_conditions.ipynb
@@ -162,6 +162,7 @@
    "id": "fc1f3b14",
    "metadata": {},
    "source": [
+    "<div dir=\"rtl\">\n",
     "\n",
     "## تمرین‌ها\n",
     "\n",
@@ -173,7 +174,9 @@
     "\n",
     "۴. برنامه‌ای بنویسید که نام کاربری و رمز عبور را از کاربر بگیرد و بررسی کند که درست هستند یا نه.\n",
     "\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -219,7 +222,7 @@
    "source": [
     "<div dir=\"rtl\">\n",
     "\n",
-    "## تشخیص سرویس ایمیل (@gmail.com یا @yahoo.com)\n",
+    "## تمرین: تشخیص سرویس ایمیل (@gmail.com یا @yahoo.com)\n",
     "\n",
     "\n",
     "برنامه‌ای بنویسید که ایمیل کاربر را بگیرد و بررسی کند آیا به @yahoo.com یا @gmail.com ختم می‌شود یا خیر.\n",
@@ -234,7 +237,7 @@
    "source": [
     "<div dir=\"rtl\">\n",
     "\n",
-    "## بررسی نام کاربری (User Validation)\n",
+    "## تمرین: بررسی نام کاربری (User Validation)\n",
     "\n",
     "هدف: اطمینان از اینکه نام کاربری:\n",
     "\n",
@@ -243,6 +246,43 @@
     "شامل حروف کوچک انگلیسی باشه.\n",
     "\n",
     "حداقل یک عدد داشته باشه.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d316ec4d",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "\n",
+    "\n",
+    "## تمرین: تعیین وضعیت سلامت بر اساس علائم\n",
+    "یک برنامه بنویس که علائم یک فرد را به صورت ورودی بگیرد:\n",
+    "\n",
+    "    - دما (عدد اعشاری)\n",
+    "\n",
+    "    - داشتن سرفه (بله/خیر)\n",
+    "\n",
+    "    - داشتن تنگی نفس (بله/خیر)\n",
+    "\n",
+    "بر اساس این داده‌ها، وضعیت سلامت فرد را طبق قوانین زیر تشخیص بده و چاپ کن:\n",
+    "\n",
+    "    - اگر دما بالای ۳۸ درجه و سرفه و تنگی نفس هر دو وجود داشت:\n",
+    "        \"وضعیت: اورژانسی، سریعاً به پزشک مراجعه کنید.\"\n",
+    "\n",
+    "    - اگر دما بالای ۳۸ و فقط یکی از دو علامت (سرفه یا تنگی نفس) بود:\n",
+    "        \"وضعیت: مراقبت ویژه، حتما استراحت کنید.\"\n",
+    "\n",
+    "    - اگر دما بین ۳۷ تا ۳۸ و یکی از دو علامت بود:\n",
+    "        \"وضعیت: مشکوک به بیماری، مراقب باشید.\"\n",
+    "\n",
+    "    - اگر دما زیر ۳۷ و هیچ علامتی نبود:\n",
+    "        \"وضعیت: سالم، بهداشت را رعایت کنید.\"\n",
+    "\n",
+    "    - در غیر این صورت:\n",
+    "        \"وضعیت: نیاز به بررسی بیشتر.\"\n",
     "\n",
     "</div>"
    ]
