added solutions of session 4 (loops)

--- a/python_session4_loops.ipynb
+++ b/python_session4_loops.ipynb
@@ -154,7 +154,15 @@
     "۳. برنامه‌ای بنویسید که از کاربر یک عدد بگیرد و جدول ضرب آن را چاپ کند.  \n",
     "۴. یک رشته بگیرید و تعداد حروف صدادار (a, e, i, o, u) آن را بشمارید.  \n",
     "\n",
-    "---\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc1b98d2",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
     "\n",
     "## تمرین‌های ترکیبی (حلقه + شرط)\n",
     "\n",
